<resources>
    <string name="app_name">InfinityRead</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_phone">Verify Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="share_knowledge">Share Knowledge</string>
    <string name="sign_In">Sign In</string>
    <string name="verify">Verify</string>
    <string name="profile">Profile</string>
    <string name="place">Place</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="continuee">Continue</string>
    <string name="interests">Interests</string>
    <string name="genre">Genre</string>
    <string name="pickup">Pick your interested genres of books</string>
    <string name="done">Done</string>
    <string name="details">Details</string>
    <string name="wish_list">Wishlist</string>
    <string name="request">Request</string>
    <string name="add">Add</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="lend">Lend</string>
    <string name="borrowed">Borrowed</string>
    <string name="points">Points</string>
    <string name="edit">Edit</string>
    <string name="gender">Gender</string>
    <string name="borrow">Borrow</string>
    <string name="user_name">User Name</string>
    <string name="chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>