<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Profile_Settings">

    <TextView
        android:id="@+id/tv_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        android:textStyle="bold"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        android:fontFamily="@font/reemkufi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_Edit_ProfilePic"
        android:layout_width="177dp"
        android:layout_height="188dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Edit"
        tools:srcCompat="@drawable/profile" />

    <LinearLayout
        android:id="@+id/lnrlyt_Edit_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Edit_ProfilePic">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="19"
            android:elevation="8dp"
            android:fontFamily="@font/reemkufi"
            android:text="@string/full_name"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_edit_24" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrlyt_Edit_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnrlyt_Edit_Name">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="19"
            android:elevation="8dp"
            android:fontFamily="@font/reemkufi"
            android:text="@string/email_id"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_edit_24" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrlyt_Edit_DOB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnrlyt_Edit_Email">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="19"
            android:elevation="8dp"
            android:fontFamily="@font/reemkufi"
            android:text="@string/dob"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_edit_24" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrlyt_Edit_Gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Edit_Continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnrlyt_Edit_DOB"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="19"
            android:elevation="8dp"
            android:fontFamily="@font/reemkufi"
            android:text="@string/gender"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_edit_24" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Edit_Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/reemkufi"
        android:text="@string/continuee"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/darkBlue"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>