<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userPicBookCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="12dp"
            android:layout_gravity="center"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <TextView
                    android:id="@+id/bookNameBookCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="8dp"
                    android:fontFamily="@font/reemkufi"
                    android:gravity="start"
                    android:text="@string/book_name"
                    android:textColor="@color/darkBlue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pointsBookCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:elevation="8dp"
                    android:fontFamily="@font/reemkufi"
                    android:gravity="end"
                    android:text="@string/points"
                    android:textColor="@color/darkBlue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <TextView
                    android:id="@+id/userNameBookCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="8dp"
                    android:fontFamily="@font/reemkufi"
                    android:gravity="start"
                    android:text="@string/full_name"
                    android:textColor="@color/darkBlue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/starsBookCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:elevation="8dp"
                    android:fontFamily="@font/reemkufi"
                    android:gravity="end"
                    android:text="4.5 *"
                    android:textColor="@color/darkBlue"
                    android:textSize="12sp"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <TextView
                    android:id="@+id/photosBookCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="8dp"
                    android:fontFamily="@font/reemkufi"
                    android:gravity="start"
                    android:text="12+ Photos"
                    android:textColor="@color/darkBlue"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:fontFamily="@font/reemkufi"
                    android:text="@string/borrow"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:backgroundTint="@color/darkBlue"
                    app:cornerRadius="24dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/reemkufi"
                    android:text="@string/wish_list"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:backgroundTint="@color/darkBlue"
                    app:cornerRadius="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>