<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BookDetails">

    <TextView
        android:id="@+id/tv_BookDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/details"
        android:textStyle="bold"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        android:fontFamily="@font/reemkufi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lnrlyt_BookDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_BookDetails">


        <ImageView
            android:id="@+id/iv_BookDetails_book"
            android:layout_width="144dp"
            android:layout_height="144dp"
            app:srcCompat="@drawable/book" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="40dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="8dp"
                android:fontFamily="@font/reemkufi"
                android:text="@string/full_name"
                android:textColor="@color/darkBlue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="8dp"
                android:fontFamily="@font/reemkufi"
                android:text="@string/full_name"
                android:textColor="@color/darkBlue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="8dp"
                android:fontFamily="@font/reemkufi"
                android:text="@string/full_name"
                android:textColor="@color/darkBlue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="8dp"
                android:fontFamily="@font/reemkufi"
                android:text="@string/full_name"
                android:textColor="@color/darkBlue"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/lnrlyt_BookDetails_ButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnrlyt_BookDetails">

    </ScrollView>

    <LinearLayout
        android:id="@+id/lnrlyt_BookDetails_ButtonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reemkufi"
            android:text="@string/wish_list"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/darkBlue"
            app:cornerRadius="14dp"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/reemkufi"
            android:text="@string/request"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/darkBlue"
            app:cornerRadius="14dp"
            android:layout_margin="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>